// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log Essentials package when doing standard logging should match the snapshot 1`] = `
Array [
  Array [
    "[32m✔[39m",
    "Hello, world!
",
  ],
  Array [
    "[33m⚠[39m",
    "Hello, world!
",
  ],
  Array [
    "[34mℹ[39m",
    "Hello, world!
",
  ],
  Array [
    "[31m✖[39m",
    "Hello, world!
",
  ],
  Array [
    "Hello, world!
",
  ],
  Array [
    "Hello, world!
",
  ],
]
`;

exports[`Log Essentials package when using a logger with options should match the snapshot 1`] = `
Array [
  Array [
    "[my-other-namespace]",
    ":",
    "[32m✔[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-other-namespace]",
    ":",
    "[33m⚠[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-other-namespace]",
    ":",
    "[34mℹ[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-other-namespace]",
    ":",
    "[31m✖[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-other-namespace]",
    ":",
    "Hello, world!
",
  ],
  Array [
    "[my-other-namespace]",
    ":",
    "Hello, world!
",
  ],
]
`;

exports[`Log Essentials package when using a namespaced logger should match the snapshot 1`] = `
Array [
  Array [
    "[my-namespace]",
    ":",
    "[32m✔[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-namespace]",
    ":",
    "[33m⚠[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-namespace]",
    ":",
    "[34mℹ[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-namespace]",
    "=>",
    "[31m✖[39m",
    "Hello, world!
",
  ],
  Array [
    "[my-namespace]",
    "=>",
    "Hello, world!
",
  ],
  Array [
    "[my-namespace]",
    "=>",
    "Hello, world!
",
  ],
]
`;
